[package]
name = "m_rust_folder_menu"
version = "0.1.0"
edition = "2024"

[dependencies]
# rfd = { version = "0.15.4", default-features = false, features = ["xdg-portal", "tokio"] }
# tokio = { version = "1.47.1", features = ["full"]}
# rfd = { version = "0.15.4", features = ["xdg-portal"] }
rfd = { version = "0.15.4", default-features = false, features = ["gtk3"] }
# rfd = "0.15.4"
